; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-async.c_prepare_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-async.c_prepare_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prepare = common dso_local global i32 0, align 4
@prepare_cb_called = common dso_local global i32 0, align 4
@thread = common dso_local global i32 0, align 4
@thread_cb = common dso_local global i32 0, align 4
@mutex = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @prepare_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prepare_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = icmp eq i32* %4, @prepare
  %6 = zext i1 %5 to i32
  %7 = call i32 @ASSERT(i32 %6)
  %8 = load i32, i32* @prepare_cb_called, align 4
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* @prepare_cb_called, align 4
  %10 = icmp ne i32 %8, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %20

12:                                               ; preds = %1
  %13 = load i32, i32* @thread_cb, align 4
  %14 = call i32 @uv_thread_create(i32* @thread, i32 %13, i32* null)
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = icmp eq i32 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i32 @ASSERT(i32 %17)
  %19 = call i32 @uv_mutex_unlock(i32* @mutex)
  br label %20

20:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_thread_create(i32*, i32, i32*) #1

declare dso_local i32 @uv_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
